<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtViewPlayerX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scoresPlayerX" />

        <TextView
            android:id="@+id/txtViewPlayerO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scoresPlayerO" />

        <TextView
            android:id="@+id/txtViewTies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scoresTies" />

        <TextView
            android:id="@+id/txtViewComp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scoresComp" />

        <TextView
            android:id="@+id/txtViewReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scoresComp" />
    </LinearLayout>

</LinearLayout>