<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="15">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/aboutName"
            android:textColor="@color/light" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/aboutGame"
            android:textColor="@color/light" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/aboutCreators"
            android:textColor="@color/light" />

        <ImageView
            android:id="@+id/aboutImg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/grumpycat"
            android:layout_weight="7"
            android:scaleType="fitCenter"
            android:layout_marginBottom="@dimen/image_bottom_margin"/>
    </LinearLayout>

</LinearLayout>